fix: Move CD down 2px on mobile

--- a/style.css
+++ b/style.css
@@ -1553,7 +1553,11 @@ body {
   .layer-3 {
     width: 60%;
     height: 60%;
-    top: 30%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, calc(-50% + 2px));
+    margin: 0;
+    bottom: auto;
   }
 }
 
